# arduino-ambient-lighting

./: README.md
arduino-files/__vm/: .ambientLighting.vsarduino.h
screen-processing/: CMakeLists.txt  Makefile  hello-world  hello-world.cpp  openCV-test.py
screen-processing/c++/: sanity-test
screen-processing/python/: filter-by-row.py  openCV-test.py  whole-screen.py
screen-processing/src/: average-color.cpp  makefile-test.cpp
